add form action

--- a/index.html
+++ b/index.html
@@ -287,7 +287,11 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-6 order-1 order-md-2 mb-4 mb-md-0">
-						<form class="contact-form">
+						<form
+							class="contact-form"
+							action="https://formspree.io/f/xvolozod"
+							method="POST"
+						>
 							<div class="mb-3">
 								<label for="name" class="form-label">Imię</label>
 								<input
@@ -295,15 +299,26 @@
 									class="form-control"
 									aria-label="Imię"
 									id="name"
+									name="Imie"
 								/>
 							</div>
 							<div class="mb-3">
 								<label for="email" class="form-label">Adres email</label>
-								<input type="email" class="form-control" id="email" />
+								<input
+									type="email"
+									name="Adres mailowy"
+									class="form-control"
+									id="email"
+								/>
 							</div>
 							<div class="mb-4">
 								<label for="text" class="form-label">Wiadomość</label>
-								<textarea class="form-control" id="text" rows="3"></textarea>
+								<textarea
+									class="form-control"
+									name="Treść"
+									id="text"
+									rows="3"
+								></textarea>
 							</div>
 							<button type="submit" class="contact-form__btn">Wyślij</button>
 						</form>
