add formspree to all pages

--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
 									class="form-control"
 									aria-label="Imię"
 									id="name"
-									name="Imie"
+									name="Imię"
+									required
 								/>
 							</div>
 							<div class="mb-3">
@@ -309,6 +310,7 @@
 									name="Adres mailowy"
 									class="form-control"
 									id="email"
+									required
 								/>
 							</div>
 							<div class="mb-4">
@@ -318,6 +320,7 @@
 									name="Treść"
 									id="text"
 									rows="3"
+									required
 								></textarea>
 							</div>
 							<button type="submit" class="contact-form__btn">Wyślij</button>
