--- a/about.html
+++ b/about.html
@@ -80,10 +80,10 @@
 								<h3 class="mb-4">
 									Podhalańska Państwowa Uczelnia Zawodowa w Nowym Targu uzyskała
 									grant Narodowego Banku Polskiego w konkursie
-									<span>"Uczelnie Szkołom – o finansach z NBP"</span>.
-									Doświadczeni wykładowcy i praktycy Podhalańskiego Ośrodka Nauk
-									Ekonomicznych – jednostki wspólnej PPUZ w Nowym Targu i UE w
-									Krakowie – przeprowadzą zajęcia dotyczące
+									<span>"Uczelnie Szkołom – o finansach z NBP. Edycja II."</span
+									>. Doświadczeni wykładowcy i praktycy Podhalańskiego Ośrodka
+									Nauk Ekonomicznych – jednostki wspólnej PPUZ w Nowym Targu i
+									UE w Krakowie – przeprowadzą zajęcia dotyczące
 									<span>ekonomii</span> i <span>bankowości</span> dla uczniów
 									klas drugich i trzecich szkół średnich z terenu powiatów
 									nowotarskiego, suskiego oraz tatrzańskiego.
@@ -108,7 +108,7 @@
 										<span>Głównym celem projektu</span> jest poszerzenie wiedzy
 										i umiejętności praktycznych uczniów klas II i III szkół
 										średnich w zakresie rynków finansowych i zarządzania
-										finansami osobistymi. Grupa docelowa to 350 osób uczniów
+										finansami osobistymi. Grupa docelowa to 300 osób uczniów
 										szkół średnich. Cel ten będzie realizowany za pomocą
 										innowacyjnych metod dydaktycznych łączących teorię z
 										praktyką, wykorzystując przykładowo analizę case study,
@@ -192,13 +192,11 @@
 										ubezpieczeń w Polsce).
 									</li>
 									<li>
-										Główne instytucje wpływające na stabilność ekonomiczną i
-										finansową kraju (zakres tematyczny: rola najważniejszych
-										instytucji ekonomicznych i finansowych w Polsce, ze
-										szczególnym uwzględnieniem Narodowego Banku Polskiego, Rady
-										Polityki Pieniężnej, Komisji Nadzoru Finansowego, a także
-										Urzędu Ochrony Konkurencji i Konsumentów oraz Giełdy
-										Papierów Wartościowych w Warszawie S.A.).
+										Przedsiębiorczość i kariera zawodowa (zakres tematyczny:
+										przedsiębiorczość i jej znaczenie w gospodarce, cechy osoby
+										przedsiębiorczej, rola komunikacji interpersonalnej i
+										negocjacji, kwalifikacje zawodowe niezbędne na rynku, trendy
+										na rynku pracy).
 									</li>
 								</ul>
 							</div>
