--- a/condintions.html
+++ b/condintions.html
@@ -85,12 +85,12 @@
 										<span
 											>uczniów, pod opieką nauczycieli, zapraszamy na
 											jednodniowe, całodzienne (od 9:00 do 15:00) zajęcia, w
-											wybraną przez Państwa środę 1, 8, 22, 29. kwietnia lub 13.
-											maja br.</span
+											wybraną przez Państwa środę 9, 16, 23. marca lub 6, 20.
+											kwietnia 2022 roku</span
 										>
 									</li>
 									<li class="mb-2">
-										<span>liczebność grup to 35 osób</span>
+										<span>liczebność grup to 25-35 osób</span>
 									</li>
 									<li class="mb-2">
 										<span
@@ -124,7 +124,7 @@
 										<span
 											><strong
 												>formularz zgłoszenia zostanie uruchomiony w dniu 10
-												lutego, możliwość zgłaszania grup – do 16 lutego 2020
+												lutego, możliwość zgłaszania grup – do 15 lutego 2022
 												roku</strong
 											></span
 										>
@@ -132,14 +132,14 @@
 									<li class="mb-2">
 										<span
 											>listę zakwalifikowanych szkół i grup opublikujemy na
-											stronie internetowej 17 lutego 2020 roku</span
+											stronie internetowej 15 lutego 2022 roku</span
 										>
 									</li>
 									<li>
 										<span
 											>skompletowanie dokumentacji niezbędnej do przetwarzania
-											danych osobowych uczestników projektów planujemy do 29
-											lutego br.</span
+											danych osobowych uczestników projektów planujemy do 28
+											lutego 2022 roku.</span
 										>
 									</li>
 								</ul>
