--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
 							<article>
 								<h3>
 									Zapraszamy uczniów II i III klas szkół średnich z powiatów:
-									<span>nowotarskiego</span>, <span>suskiego</span> i
-									<span>tatrzańskiego</span> do wzięcia udziału w innowacyjnym
+									<span>nowotarskiego</span>, <span>tatrzańskiego</span>,
+									<span>myślenickiego</span>, <span>limanowskiego</span> i
+									<span>suskiego</span> do wzięcia udziału w innowacyjnym
 									projekcie realizowanym przez Podhalańską Państwową Uczelnię
 									Zawodową w Nowym Targu z Narodowym Bankiem Polskim, w ramach
 									II edycji konkursu
@@ -132,15 +133,13 @@
 									</li>
 									<li>Oszczędzanie i inwestowanie</li>
 									<li>Kredyty, pożyczki, ubezpieczenia</li>
-									<li>
-										Główne instytucje wpływające na stabilność ekonomiczną i
-										finansową kraju
-									</li>
+									<li>Przedsiębiorczość i kariera zawodowa</li>
 								</ul>
 								<hr class="c-hr" />
 								<h3>
-									Rekrutacja odbędzie się w dniach
-									<span>10 - 29 lutego</span> br.
+									Rekrutacja odbędzie się w dniach od
+									<span>10 grudnia 2021</span> do
+									<span>15 lutego 2022 roku</span>.
 								</h3>
 								<hr class="c-hr" />
 								<h2 class="mb-4">
