--- a/schedule.html
+++ b/schedule.html
@@ -71,7 +71,7 @@
 			<div class="container my-5">
 				<h1 class="mb-0">Harmonogram zajęć dydaktycznych</h1>
 				<h2 class="sub-headline">
-					projektu: 'Uczelnie szkołom o finansach z NBP'
+					projektu: 'Uczelnie szkołom o finansach z NBP. Edycja II.'
 				</h2>
 			</div>
 			<section class="sub-about-section mb-5">
@@ -79,12 +79,14 @@
 					<div class="row">
 						<div class="col-12">
 							<article>
-								<h3>Terminy: 28.10, 4.11, 18.11, 25.11, 02.12.</h3>
+								<h3>Terminy: 9.03, 16.03, 23.03, 6.04, 20.04</h3>
 								<h3 class="mb-5">
 									Zajęcia prowadzone zdalnie poprzez wykorzystanie platformy
 									Zoom
 								</h3>
-								<h2 class="mb-3">Termin 28.10.2020</h2>
+								<h2 class="py-5">Harmonogram zostanie podany wkrótce.</h2>
+								<!--
+								<h2 class="mb-3">Termin 09.03.2022</h2>
 								<div class="group mb-5">
 									<h4>
 										<strong>Grupa 1</strong> – I Liceum Ogólnokształcące im.
@@ -155,6 +157,7 @@
 										<li>14.15-14.30 – posttesty, podsumowanie zajęć</li>
 									</ul>
 								</div>
+								-->
 							</article>
 						</div>
 					</div>
