--- a/schedule.html
+++ b/schedule.html
@@ -84,7 +84,26 @@
 									Zajęcia prowadzone zdalnie poprzez wykorzystanie platformy
 									Zoom
 								</h3>
-								<h2 class="py-5">Harmonogram zostanie podany wkrótce.</h2>
+
+								<div class="group mb-5">
+									<ul>
+										<li>9.00 - 9.15 – powitanie uczestników, pre-testy</li>
+										<li>9.15 - 10.15 – I blok zajęciowy</li>
+										<li>10.15 - 10.30 – przerwa</li>
+										<li>10.30 - 11.30 – II blok zajęciowy</li>
+										<li>11.30 - 11.45 – przerwa</li>
+										<li>11.45 - 12.45 – III blok zajęciowy</li>
+										<li>12.45 - 13.00 – przerwa</li>
+										<li>13.00 - 14.00 – IV blok zajęciowy</li>
+										<li>14.00 - 14.15 – post-test</li>
+										<li>14.15 - 15.00 – obiad i pożegnanie uczestników</li>
+									</ul>
+								</div>
+
+								<h2 class="mb-5">
+									Szczegółowy harmonogram zostanie podany wkrótce.
+								</h2>
+
 								<!--
 								<h2 class="mb-3">Termin 09.03.2022</h2>
 								<div class="group mb-5">
