--- a/files.html
+++ b/files.html
@@ -79,7 +79,7 @@
 								<ul class="files-list">
 									<li>
 										<a
-											href="./assets/files/REGULAMIN-1d8a09b01bb1f37acb54a9840c4a28ab.pdf"
+											href="./assets/files/Regulamin udziału w projekcie NBP 2021.pdf"
 											target="_blank"
 											title="Regulamin Projektu"
 											>Regulamin Projektu</a
