add register option

--- a/register.html
+++ b/register.html
@@ -73,17 +73,20 @@
 			</div>
 			<section class="purpose-section mb-5">
 				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-12 col-md-10">
-							<iframe
-								src="https://docs.google.com/forms/d/e/1FAIpQLScnvfAyDmiLPtBCpzKXtjVHVvUXkWUynhRWwaZ7jaUKKOPi2w/viewform?embedded=true"
-								width="100%"
-								height="768"
-								frameborder="0"
-								marginheight="0"
-								marginwidth="0"
-								>Ładuję…</iframe
-							>
+					<div class="row">
+						<div class="col-12 col-sm-6 mb-4 mb-sm-0">
+							<a href="https://forms.gle/TW2gburiAH6peokL9">
+								<div class="link-to-form">
+									<h2><span>Rejestracja dla uczniów</span></h2>
+								</div>
+							</a>
+						</div>
+						<div class="col-12 col-sm-6 mb-5 mb-md-0">
+							<a href="https://forms.gle/CNMhi2oZMqoMy6q18">
+								<div class="link-to-form">
+									<h2><span>Rejestracja dla szkół</span></h2>
+								</div>
+							</a>
 						</div>
 					</div>
 				</div>
