--- a/schedule.html
+++ b/schedule.html
@@ -79,13 +79,16 @@
 					<div class="row">
 						<div class="col-12">
 							<article>
-								<h3>Terminy: 9.03, 16.03, 23.03, 6.04, 20.04</h3>
+								<h3 class="mb-4">
+									Terminy: <span>9.03</span>, <span>16.03</span>,
+									<span>23.03</span>, <span>6.04</span>, <span>20.04</span>
+								</h3>
 								<h3 class="mb-5">
-									Zajęcia prowadzone zdalnie poprzez wykorzystanie platformy
+									Zajęcia prowadzone są zdalnie poprzez wykorzystanie platformy
 									Zoom
 								</h3>
 
-								<div class="group mb-5">
+								<div class="c-group mb-5">
 									<ul>
 										<li>9.00 - 9.15 – powitanie uczestników, pre-testy</li>
 										<li>9.15 - 10.15 – I blok zajęciowy</li>
@@ -99,10 +102,6 @@
 										<li>14.15 - 15.00 – obiad i pożegnanie uczestników</li>
 									</ul>
 								</div>
-
-								<h2 class="mb-5">
-									Szczegółowy harmonogram zostanie podany wkrótce.
-								</h2>
 
 								<!--
 								<h2 class="mb-3">Termin 09.03.2022</h2>
