--- a/index.html
+++ b/index.html
@@ -79,23 +79,24 @@
 								realizowany z Narodowym Bankiem Polskim w ramach programu
 								edukacji ekonomicznej.
 							</p>
-							<div class="d-flex justify-content-center">
+							<div class="d-flex justify-content-center mb-3 mb-lg-4">
 								<a href="#tiles" class="hero__btn">Zapraszamy</a>
+							</div>
+							<div class="d-flex justify-content-center">
+								<a
+									href="https://www.nbp.pl/home.aspx?f=/konkursy/2021/uczelnie-szkolom/main.html"
+									class="hero__link"
+									>O konkursie NPB</a
+								>
 							</div>
 						</div>
 						<div class="col-12 col-md-6">
 							<div>
-								<picture>
-									<source
-										media="(min-width: 768px)"
-										srcset="./assets/hero-image-md.jpg"
-									/>
-									<img
-										class="hero__image"
-										src="./assets/hero-image-sm.jpg"
-										alt="uczelnie szkołom"
-									/>
-								</picture>
+								<img
+									class="hero__image"
+									src="./assets/hero-image-sm.jpg"
+									alt="uczelnie szkołom"
+								/>
 							</div>
 						</div>
 					</div>
