--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 								>
 							</div>
 						</div>
-						<div class="col-12 col-md-6">
-							<div>
+						<div class="col-12 col-md-6 px-0 px-sm-3">
+							<div class="d-flex justify-content-center">
 								<img
 									class="hero__image"
-									src="./assets/hero-image-sm.jpg"
+									src="./assets/plakat.jpg"
 									alt="uczelnie szkołom"
 								/>
 							</div>
@@ -147,8 +147,17 @@
 									Udział w projekcie jest <span>bezpłatny!</span>
 								</h2>
 								<h4>
-									Każdy uczestnik otrzyma certyfikat. Zapewniamy ciekawe
-									zajęcia, transport, ubezpieczenie, obiad i przerwę herbacianą.
+									Każdy uczestnik otrzyma
+									<strong
+										><a
+											href="./assets/plakat.jpg"
+											target="_blank"
+											title="Certyfikat"
+											class="white-link"
+											>certyfikat</a
+										></strong
+									>. Zapewniamy ciekawe zajęcia, transport, ubezpieczenie, obiad
+									i przerwę herbacianą.
 								</h4>
 							</article>
 						</div>
