--- a/files.html
+++ b/files.html
@@ -94,7 +94,7 @@
 								<ul class="files-list files-list--xl">
 									<li class="mb-3">
 										<a
-											href="./assets/files/Załącznik nr 1 do REGULAMINU-9205dc2ee9690199158721c3482a50e9.pdf"
+											href="./assets/files/Zał. 1 do Regulminu projektu NBP 2021.pdf"
 											target="_blank"
 											title="Załącznik nr 1 do Regulaminu"
 											>Załącznik nr 1 do Regulaminu</a
@@ -102,7 +102,7 @@
 									</li>
 									<li class="mb-3">
 										<a
-											href="./assets/files/Załącznik nr 2 do REGULAMINU-4e5710601872541bd8302b77aec205ee.pdf"
+											href="./assets/files/Zał.2 do Regulaminu projektu NBP 2021.pdf"
 											target="_blank"
 											title="Załącznik nr 2 do Regulaminu"
 											>Załącznik nr 2 do Regulaminu</a
@@ -110,7 +110,7 @@
 									</li>
 									<li>
 										<a
-											href="./assets/files/Załącznik nr 3 do REGULAMINU-c22e2a592c31bae4ba09040cd970360a.pdf"
+											href="./assets/files/Zał.3 do Regulaminu projektu NBP 2021.pdf"
 											target="_blank"
 											title="Załącznik nr 3 do Regulaminu"
 											>Załącznik nr 3 do Regulaminu</a
