--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 									Każdy uczestnik otrzyma
 									<strong
 										><a
-											href="./assets/plakat.jpg"
+											href="./assets/files/certyfikat A4.pdf"
 											target="_blank"
 											title="Certyfikat"
 											class="white-link"
