--- a/index.html
+++ b/index.html
@@ -164,6 +164,26 @@
 					</div>
 				</div>
 			</section>
+			<section class="d-none d-md-block">
+				<div class="container py-5">
+					<div class="row">
+						<div class="col d-none d-lg-block">
+							<img
+								class="promo-image"
+								src="./assets/ulotka.jpg"
+								alt="uczelnie szkołom"
+							/>
+						</div>
+						<div class="col-12 col-lg-auto">
+							<video class="promo-video" controls autoplay muted>
+								<source src="./assets/promo.mp4" type="video/mp4" />
+								<source src="./assets/promo.ogg" type="video/ogg" />
+								Your browser does not support the video tag.
+							</video>
+						</div>
+					</div>
+				</div>
+			</section>
 			<section id="tiles" class="tiles-section">
 				<div class="container">
 					<div class="row">
